<resources>
    <string name="app_name">YOURCRAFT shop</string>
    // Used by SplashActivity (Splash Screen)
    <string name="shop_name">YOURCRAFT shop</string>
    // Used for MainActivity (Login Screen)
    <string name="sign_in">Sign in</string>
    <string name="log_in">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="noAccount">Don\'t have an account?</string>
    <string name="haveAccount">Already have an account?</string>
    <string name="errorNoUsername">ERROR: Username is required.</string>
    <string name="errorNoPassword">ERROR: Password is required.</string>
    <string name="success">Success!~</string>
    <string name="logout">Logout</string>
    // Used for ShopperHome (Base user home menu screen)
    <string name="shop">Shop</string>
    <string name="orderHistory">Order History</string>
    <string name="deleteAccount">Delete Account</string>
    // Used for AdminHome (Admin home menu screen)
    <string name="shopInventory">View Inventory</string>
    <string name="salesReport">Sales Report</string>
    <string name="manageUsers">Manage Users</string>
    // Other
    <string name="logoutQuestion">Do you want to logout?</string>
    <string name="confirmDeleteAccount">Are you sure you want to delete your account?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    // Admin manage user
    <string name="changeStatusOn">Activate</string>
    <string name="changeStatusOff">Dectivate</string>
    <string name="clear">Clear</string>
    <string name="addUser">Add User</string>
    // Item Inventory
    <string name="welcomeInventory">Welcome to my inventory.</string>
    <string name="itemName">Item name</string>
    <string name="itemDescription">Short item description.</string>
    <string name="inStockQty">Units In Stock: </string>
    <string name="itemPrice">Per Unit Price (in diamonds): </string>
    <string name="itemUnit">One Unit Size: </string>
    <string-array name="unitSize">
        <item>item(s)</item>
        <item>stack(s)</item>
    </string-array>
    <string name="deleteItem">Delete Item</string>
    <string name="confirmDeleteItem">Are you sure you want to permanently delete this item?</string>
    <string name="temp">temp</string>
    <string name="orderReturn">Are you sure you want to do a return?</string>
    <string name="deleteUser">Are you sure you want to permanently delete this user?</string>
</resources>