<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:translationZ="-90dp"
    android:background="@drawable/minecraft_splash"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/loginLabel"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="270dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/log_in"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#FFFFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="300dp"
        android:layout_height="210dp"
        android:layout_marginBottom="150dp"
        android:background="#CC8A8686"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/usernameValue"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="#AAFFFFFF"
            android:drawableLeft="@drawable/ic_baseline_person_24"
            android:drawablePadding="20dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textSize="18sp"
            android:layout_marginVertical="5dp"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/passwordValue"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="#AAFFFFFF"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            android:drawablePadding="20dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="18sp"
            android:layout_marginVertical="5dp"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/signinButton"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:textSize="24dp"
            android:layout_marginTop="15dp"
            android:text="@string/sign_in" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/signupLayout"
        android:layout_width="250dp"
        android:layout_height="36dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.096">

        <TextView
            android:id="@+id/noAccountLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingRight="10dp"
            android:text="@string/noAccount"
            android:textColor="#FFAAAAAA"
            tools:layout_editor_absoluteX="134dp"
            tools:layout_editor_absoluteY="610dp" />

        <TextView
            android:id="@+id/signupLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="#FF000000"
            tools:layout_editor_absoluteX="134dp"
            tools:layout_editor_absoluteY="610dp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>