<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/minecraft_splash"
    tools:context=".RegisterUser">

    <TextView
        android:id="@+id/registerLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:shadowColor="#623D26"
        android:shadowRadius="8"
        android:text="@string/register"
        android:textColor="#FFFFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="130dp"
        android:background="#CC8A8686"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingVertical="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/usernameValue"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:background="#AAFFFFFF"
            android:drawableLeft="@drawable/ic_baseline_person_24"
            android:drawablePadding="20dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textSize="18sp"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/passwordValue"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:background="#AAFFFFFF"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            android:drawablePadding="20dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="18sp"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/signupButton"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textSize="24dp" />

        <LinearLayout
            android:id="@+id/signinLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:rotationX="0">

            <TextView
                android:id="@+id/haveAccountLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingRight="10dp"
                android:text="@string/haveAccount"
                android:textColor="#FFDDDDDD"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/signinLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:shadowColor="#1E4A01"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/sign_in"
                android:textColor="#FF9Bc86D"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>