<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dimondbg"
    tools:context=".AdminHome">

    <include layout="@layout/toolbar_layout"/>

    <ImageView
        android:id="@+id/shopLogoImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:minWidth="75dp"
        android:minHeight="75dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/stat_sys_warning" />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="40dp"
        android:shadowColor="@color/aqua"
        android:shadowRadius="5"
        android:text="@string/temp"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shopLogoImage" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@color/tGray"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingVertical="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText">

        <Button
            android:id="@+id/inventoryButton"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginVertical="10dp"
            android:backgroundTint="@color/dark_gray"
            android:gravity="center"
            android:text="@string/shopInventory"
            android:textColor="@color/aqua"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/salesButton"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginVertical="10dp"
            android:backgroundTint="@color/dark_gray"
            android:gravity="center"
            android:text="@string/salesReport"
            android:textColor="@color/aqua"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/usersButton"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginVertical="10dp"
            android:backgroundTint="@color/dark_gray"
            android:gravity="center"
            android:text="@string/manageUsers"
            android:textColor="@color/aqua"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>

