<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dimondbg"
    tools:context=".AdminManageUser">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvUser"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:layout_marginTop="130dp"
        android:layout_marginBottom="150dp"
        android:padding="20dp"
        android:scrollbarSize="10dp"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"
        app:layout_constraintVertical_bias="0.476">
    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        android:gravity="center"
        android:background="@color/dark_gray2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/usernameValue"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/username"
            android:textColorHint="@color/gray"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/passwordValue"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textColorHint="@color/gray"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="653dp" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/clearButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/clear"
                android:textSize="18sp"
                android:background="@color/gray"
                android:layout_marginRight="5dp"/>

            <Button
                android:id="@+id/addButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/addUser"
                android:textSize="18sp"
                android:background="@color/gray"
                android:layout_marginLeft="5dp"/>
        </LinearLayout>

    </LinearLayout>

    <include
        android:id="@+id/include"
        layout="@layout/toolbar_layout" />


</androidx.constraintlayout.widget.ConstraintLayout>