<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ItemDetailActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="70dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/itemNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"
            android:hint="@string/itemName" />

        <EditText
            android:id="@+id/itemDescriptionText"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:ems="10"
            android:textSize="18sp"
            android:hint="@string/itemDescription"
            android:gravity="bottom"
            android:layout_marginBottom="15dp"
            android:inputType="textMultiLine" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"

                android:orientation="vertical">

                <TextView
                    android:id="@+id/qtyInStockText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/inStockQty"
                    android:layout_gravity="right"
                    android:gravity="bottom"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/itemPriceText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/itemPrice"
                    android:layout_gravity="right"
                    android:gravity="bottom"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="0dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/qtyInStockValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="numberSigned"
                    android:gravity="center"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/itemPriceValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="numberSigned"
                    android:gravity="center"
                    android:textSize="18sp"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/itemUnitText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/itemUnit"
                android:layout_gravity="bottom"
                android:gravity="right"
                android:layout_marginBottom="5dp"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/itemUnitValue"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:layout_marginLeft="10dp"
                android:textSize="18sp"
                android:gravity="center"
                android:hint="ex: 5 stacks"
                android:inputType="textPersonName" />

        </LinearLayout>

        <Switch
            android:id="@+id/forSaleSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textSize="18sp"
            android:text="For sale?  " />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="10dp">

            <Button
                android:id="@+id/leftItemButton"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:textSize="18sp"
                android:text="Left" />

            <Button
                android:id="@+id/rightItemButton"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:textSize="18sp"
                android:text="Right" />

        </LinearLayout>

        <TextView
            android:id="@+id/deleteItemText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/deleteItem"
            android:textSize="18sp"
            android:textColor="@color/red"/>



    </LinearLayout>

    <include
        android:id="@+id/include"
        layout="@layout/toolbar_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>